# Haystack-RAG_Assistant

./: .cursorignore  .env.example  .gitignore  INSTALL.md  MANIFEST.in  README.md  README_amphilagus_web.md  base_content.txt  convert_pdf.ps1  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run_cli.ps1  run_web.ps1  run_web_app.py  setup.py
amphilagus/: README.md  __init__.py  assistant.py  config.py  database_manager.py  file_manager.py  literature.py  logger.py  main.py  manager.py  task_manager.py  web_app.py
amphilagus/agent/: agent_tools.py  assistant.py  tools.py
amphilagus/database/: manager.py  (+2 more)
configs/: md_cleaner_config.json  title_extractor_config.json
files/: raw_files_metadata.json
rag_assistant/: __init__.py  cli.py  collection_utils.py  custom_document_store.py  document_loader.py  logger.py  main.py  rag_pipeline.py  title_matcher.py  web_app.py
results/: batch_query_Brew 等 - 2025 - Wiggle150 Benchmarking Density Fun_20250418_153758.md  batch_query_Liang 等 - 2022 - Revisiting the Performance of Tim_20250418_151142.md  batch_query_Mirarchi 等 - 2024 - AMARO All Heavy-Atom Transfera_20250418_132503.md  batch_query_Nandy和Jose - 2025 - Directed Electrostatics Strate_20250418_154316.md  batch_query_Prodhan和Troisi - 2024 - Effective Model Reduction _20250418_132929.md  batch_query_Zhang 等 - 2024 - Polymer-Unit Graph Advancing Inte_20250418_132414.md
scripts/: clean_md_files.ps1  run_web_app.py  update_templates.py
tests/: README.md  cleanup.py  run_tests.py  test_batch_query.py  test_document_loader.py  test_embedding_retrieval.py  test_pipeline_results.py  test_rag_pipeline.py
(+67 files in other folders)
