[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amphilagus"
version = "0.1.0"
description = "Project management for Haystack RAG Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amphilagus Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
    "markdown>=3.5.1",
    "haystack-ai>=2.0.0",
    "sentence-transformers>=2.2.2",
    "chroma-haystack>=0.1.2",
    "pypdf>=3.17.1",
    "beautifulsoup4>=4.12.0",
    "python-docx>=0.8.11",
    "flask>=2.3.0",
    "werkzeug>=2.3.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "black",
    "isort",
    "mypy",
]
web = [
    "streamlit>=1.31.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/amphilagus"
"Bug Tracker" = "https://github.com/yourusername/amphilagus/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["amphilagus"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
